--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Miami"
   employer         : "Florida International University"
   uri              : # URL
-  email            : "zhu@fiu.edu" 
+  email            : "weizhu@fiu.edu" 
 
   # Academic websites
   academia         : # URL
